fix spacing and add labels to input fields

--- a/style.css
+++ b/style.css
@@ -94,19 +94,18 @@ html, body {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	grid-template-rows: repeat(4, 1fr);
+	align-self: center;
+	border: none;
+	column-gap: 60px;
+	row-gap: 10px;
 }
 
-.fields .header {
+.fieldsWrapper {
 	grid-column: 1;
-	grid-row: 1;
-}
-
-.columnOne {
-	grid-column: 1;
-}
-
-.columnTwo {
-	grid-column: 2;
+	grid-row: 2;
+	display: flex;
+	margin: 10;
+	justify-content: center;
 }
 
 input {
@@ -120,6 +119,14 @@ label {
 	border: 0;
 }
 
-.firstName .lastName .email {
-	grid-row: 3;
+.header, .inputWrapper0, .inputWrapper2, .inputWrapper4 {
+	grid-column: 1;
+}
+
+.lastName, .phoneNumber, .confirmPassword {
+	grid-column: 2;
+}
+
+.firstName, .fnLabel {
+	grid-row: 2;
 }
